included tnum setting for inter font to stop numbers jumping around in /game

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,7 @@
+.inter-tnum {
+  font-feature-settings: "tnum";
+}
+
 .container {
   display: flex;
   height: 100vh;
